[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Resources/LevelMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Stages/Stage1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Resources/SceneManager.tscn" type="PackedScene" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[node name="LevelMenu" parent="." instance=ExtResource( 3 )]
margin_right = 1025.0
margin_bottom = 607.0

[node name="SceneManager" parent="." instance=ExtResource( 5 )]

[node name="Stage1" parent="SceneManager" instance=ExtResource( 4 )]
